adding faq page

--- a/tech-website/style/features.css
+++ b/tech-website/style/features.css
@@ -1,6 +1,55 @@
-.features-container {
+.features-container, .features-img-heading-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 30px;
 }
 
+.features-section {
+  background-image: -webkit-gradient(linear, right top, left top, from(rgba(50, 6, 87, 0.75)), to(rgba(31, 16, 121, 0.7))), url("pexels-pixabay-220201.jpg");
+  background-image: linear-gradient(to left, rgba(50, 6, 87, 0.75), rgba(31, 16, 121, 0.7)), url("pexels-pixabay-220201.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 94vh;
+  width: 100%;
+}
+
+.features-section .line {
+  background: white;
+}
+
+.features-section .features-div {
+  border-radius: 8px;
+  padding: 2px 12px 2px 18px;
+  width: 18rem;
+  height: 14rem;
+  border: 8px double #f3f3f3;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.features-section img {
+  margin-left: -42px;
+  width: 5rem;
+  height: 5rem;
+}
+
+.features-section p {
+  color: white;
+  margin: 10px 10px 0px -50px;
+  font-size: 2.3rem;
+}
+
+.features-section span {
+  color: white;
+  text-align: center;
+  line-height: 30px;
+}
 /*# sourceMappingURL=features.css.map */
