--- a/tech-website/style/body.scss
+++ b/tech-website/style/body.scss
@@ -45,18 +45,25 @@ body::-webkit-scrollbar-thumb {
 
 
 .create-account {
-  flex-direction: column;
-  align-items: center;
+ @include flexDirection(column);
+  cursor: pointer;
   gap: 30px;
   z-index: +1;
   width: 100%;
   height: 44.6rem;
   background: white;
   color: white;
-  top: 50%;
+  top: 0%;
   animation: createAccount .5s ease-in-out;
 }
-
+.create-account-heading{
+  border-left:2px solid transparent;
+  border-right:2px solid transparent;
+  border-top:5px double #00006b;
+  border-bottom:5px double #00006b;
+  color: #00006b;
+  padding:6px 2px 6px 2px;
+}
 .create-account-input {
   border: 1px solid transparent;
   border-radius: 4px;
@@ -65,14 +72,48 @@ body::-webkit-scrollbar-thumb {
   width: 30%;
   box-shadow: .2px .2px 14px .2px lightgray;
 }
+.sign-up-buttons-container{
+@include flexDirection(column);
+  margin-top: 50px;
+  gap:30px;
+  .sign-up-button{
+    padding: 7px 62px 7px 62px;
+    width: 100%;
+  }
+  .sign-up-button:nth-child(2){
+    background: #da0000;
+    box-shadow: .2px .2px 5px .2px #9a0000;
+  }
 
-.remove-create-account-icon-div {
-  margin: 50px 0px 0px 10px;
-  flex-direction: row;
-  justify-content: flex-end;
+  .sign-up-button:nth-child(3){
+    background: #006ce7;
+    box-shadow: .2px .2px 5px .2px #026fcc;
+  }
 
 }
 
+
+form{
+  @include flexDirection(column);
+  gap:20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.remove-create-account-icon-div{
+  @include flexDirection(row);
+  padding:20px 22px 2px 2px;
+  justify-content:flex-end;
+  cursor: $cursorButton;
+}
+
+.remove-create-account-icon{
+  font-size: 1.2rem;
+  height: 2.3rem;
+  background: linear-gradient(#e71000, #d30000);
+  box-shadow: .2px .2px 4px .2px #b60000;
+
+}
 @keyframes createAccount {
   0% {
     background: lightgray;
@@ -170,20 +211,24 @@ body::-webkit-scrollbar-thumb {
     background: none;
   }
 }
-
-.contact-us-box {
-  padding: 26px 22px 12px 21px;
+  .contact-us-div {
+  @include flexDirection(row);
   background: linear-gradient(to left, #12002d, #13002f);
   box-shadow: .2px .2px 2px .2px black;
-  z-index: +1;
-  top: 22%;
+    z-index: +1;
+  position: fixed;
+  top: 100%;
   left: 0%;
   width: 97.2%;
   height: 20rem;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-  animation: contactUsPage .4s ease-in-out;
+  padding: 42px 2px 2px 22px;
+  gap: 200px;
+  font-size: .9rem;
 }
+
+
 
 @keyframes contactUsPage {
   0% {
@@ -191,21 +236,13 @@ body::-webkit-scrollbar-thumb {
     opacity: 0;
   }
   100% {
-
     transform: scale(1);
     opacity: 1;
   }
 }
 
-
-
   .contact-us-div {
-    @include flexDirection(row);
-    position: absolute;
-    top:100%;
-    padding: 42px 2px 2px 22px;
-    gap: 200px;
-    font-size: .9rem;
+
     h2{
       padding:0px 5px 0px 20px;
     }
@@ -252,6 +289,8 @@ body::-webkit-scrollbar-thumb {
   }
     }
   }
+
+
 
   .remove-contact-us-icon{
     border-top-right-radius: 20px;
