--- a/tech-website/style/style.css
+++ b/tech-website/style/style.css
@@ -32,16 +32,26 @@ body::-webkit-scrollbar-thumb {
 }
 
 .create-account {
+  display: flex;
   flex-direction: column;
-  align-items: center;
+  cursor: pointer;
   gap: 30px;
   z-index: 1;
   width: 100%;
   height: 44.6rem;
   background: white;
   color: white;
-  top: 50%;
+  top: 0%;
   animation: createAccount 0.5s ease-in-out;
+}
+
+.create-account-heading {
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-top: 5px double #00006b;
+  border-bottom: 5px double #00006b;
+  color: #00006b;
+  padding: 6px 2px 6px 2px;
 }
 
 .create-account-input {
@@ -53,10 +63,46 @@ body::-webkit-scrollbar-thumb {
   box-shadow: 0.2px 0.2px 14px 0.2px lightgray;
 }
 
+.sign-up-buttons-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  gap: 30px;
+}
+.sign-up-buttons-container .sign-up-button {
+  padding: 7px 62px 7px 62px;
+  width: 100%;
+}
+.sign-up-buttons-container .sign-up-button:nth-child(2) {
+  background: #da0000;
+  box-shadow: 0.2px 0.2px 5px 0.2px #9a0000;
+}
+.sign-up-buttons-container .sign-up-button:nth-child(3) {
+  background: #006ce7;
+  box-shadow: 0.2px 0.2px 5px 0.2px #026fcc;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
 .remove-create-account-icon-div {
-  margin: 50px 0px 0px 10px;
+  display: flex;
   flex-direction: row;
+  padding: 20px 22px 2px 2px;
   justify-content: flex-end;
+  cursor: pointer;
+}
+
+.remove-create-account-icon {
+  font-size: 1.2rem;
+  height: 2.3rem;
+  background: linear-gradient(#e71000, #d30000);
+  box-shadow: 0.2px 0.2px 4px 0.2px #b60000;
 }
 
 @keyframes createAccount {
@@ -143,18 +189,22 @@ body::-webkit-scrollbar-thumb {
   background: none;
 }
 
-.contact-us-box {
-  padding: 26px 22px 12px 21px;
+.contact-us-div {
+  display: flex;
+  flex-direction: row;
   background: linear-gradient(to left, #12002d, #13002f);
   box-shadow: 0.2px 0.2px 2px 0.2px black;
   z-index: 1;
-  top: 22%;
+  position: fixed;
+  top: 100%;
   left: 0%;
   width: 97.2%;
   height: 20rem;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-  animation: contactUsPage 0.4s ease-in-out;
+  padding: 42px 2px 2px 22px;
+  gap: 200px;
+  font-size: 0.9rem;
 }
 
 @keyframes contactUsPage {
@@ -166,15 +216,6 @@ body::-webkit-scrollbar-thumb {
     transform: scale(1);
     opacity: 1;
   }
-}
-.contact-us-div {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  top: 100%;
-  padding: 42px 2px 2px 22px;
-  gap: 200px;
-  font-size: 0.9rem;
 }
 .contact-us-div h2 {
   padding: 0px 5px 0px 20px;
