--- a/tech-website/style/body.scss
+++ b/tech-website/style/body.scss
@@ -5,7 +5,7 @@
   flex-direction: $direction;
 }
 
-@mixin justifyContent{
+@mixin justifyContent {
   justify-content: center;
   align-items: center;
 }
@@ -22,6 +22,7 @@ body {
   font-family: 'Montserrat';
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .line {
@@ -45,7 +46,7 @@ body::-webkit-scrollbar-thumb {
 
 
 .create-account {
- @include flexDirection(column);
+  @include flexDirection(column);
   cursor: pointer;
   gap: 30px;
   z-index: +1;
@@ -56,14 +57,16 @@ body::-webkit-scrollbar-thumb {
   top: 0%;
   animation: createAccount .5s ease-in-out;
 }
-.create-account-heading{
-  border-left:2px solid transparent;
-  border-right:2px solid transparent;
-  border-top:5px double #00006b;
-  border-bottom:5px double #00006b;
+
+.create-account-heading {
+  border-left: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-top: 5px double #00006b;
+  border-bottom: 5px double #00006b;
   color: #00006b;
-  padding:6px 2px 6px 2px;
+  padding: 6px 2px 6px 2px;
 }
+
 .create-account-input {
   border: 1px solid transparent;
   border-radius: 4px;
@@ -72,20 +75,23 @@ body::-webkit-scrollbar-thumb {
   width: 30%;
   box-shadow: .2px .2px 14px .2px lightgray;
 }
-.sign-up-buttons-container{
-@include flexDirection(column);
+
+.sign-up-buttons-container {
+  @include flexDirection(column);
   margin-top: 50px;
-  gap:30px;
-  .sign-up-button{
+  gap: 30px;
+
+  .sign-up-button {
     padding: 7px 62px 7px 62px;
     width: 100%;
   }
-  .sign-up-button:nth-child(2){
+
+  .sign-up-button:nth-child(2) {
     background: #da0000;
     box-shadow: .2px .2px 5px .2px #9a0000;
   }
 
-  .sign-up-button:nth-child(3){
+  .sign-up-button:nth-child(3) {
     background: #006ce7;
     box-shadow: .2px .2px 5px .2px #026fcc;
   }
@@ -93,27 +99,28 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-form{
+form {
   @include flexDirection(column);
-  gap:20px;
+  gap: 20px;
   justify-content: center;
   align-items: center;
 }
 
-.remove-create-account-icon-div{
+.remove-create-account-icon-div {
   @include flexDirection(row);
-  padding:20px 22px 2px 2px;
-  justify-content:flex-end;
+  padding: 20px 22px 2px 2px;
+  justify-content: flex-end;
   cursor: $cursorButton;
 }
 
-.remove-create-account-icon{
+.remove-create-account-icon {
   font-size: 1.2rem;
   height: 2.3rem;
   background: linear-gradient(#e71000, #d30000);
   box-shadow: .2px .2px 4px .2px #b60000;
 
 }
+
 @keyframes createAccount {
   0% {
     background: lightgray;
@@ -211,15 +218,16 @@ form{
     background: none;
   }
 }
-  .contact-us-div {
+
+.contact-us-div {
   @include flexDirection(row);
   background: linear-gradient(to left, #12002d, #13002f);
   box-shadow: .2px .2px 2px .2px black;
-    z-index: +1;
+  z-index: +1;
   position: fixed;
   top: 100%;
   left: 0%;
-  width: 97.2%;
+  width: 98.6%;
   height: 20rem;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
@@ -227,7 +235,6 @@ form{
   gap: 200px;
   font-size: .9rem;
 }
-
 
 
 @keyframes contactUsPage {
@@ -241,64 +248,70 @@ form{
   }
 }
 
-  .contact-us-div {
+.contact-us-div {
 
-    h2{
-      padding:0px 5px 0px 20px;
-    }
-    span{
-      color: #7c7cfa;
-    }
-    form {
-      @include flexDirection(column);
-      @include justifyContent;
-      gap: 10px;
-      input{
-        border: $noBorder;
-        outline: $noInputOutline;
-        box-shadow: .2px .2px 5px .2px lightgray;
-        padding: 4px 2px 4px 7px;
-        width: 100%;
-        margin-top: -20px;
-        &::placeholder{
-          font-family: "Montserrat";
-        }
+  h2 {
+    padding: 0px 5px 0px 20px;
+  }
+
+  span {
+    color: #7c7cfa;
+  }
+
+  form {
+    @include flexDirection(column);
+    @include justifyContent;
+    gap: 10px;
+
+    input {
+      border: $noBorder;
+      outline: $noInputOutline;
+      box-shadow: .2px .2px 5px .2px lightgray;
+      padding: 4px 2px 4px 7px;
+      width: 100%;
+      margin-top: -20px;
+
+      &::placeholder {
+        font-family: "Montserrat";
       }
-      textarea{
-        box-shadow: .2px .2px 7px .2px lightgray;
-        outline: $noInputOutline;
-        margin:30px 0px 0px -5px;
+    }
+
+    textarea {
+      box-shadow: .2px .2px 7px .2px lightgray;
+      outline: $noInputOutline;
+      margin: 30px 0px 0px -5px;
+    }
+
+  }
+
+  .contact-us-column-container {
+    margin: -20px 0px 0px -20px;
+    @include flexDirection(column);
+
+    .contact-us-column {
+      @include flexDirection(column);
+
+      ion-icon {
+        font-size: 2rem;
+        color: $whiteColor;
       }
 
-    }
-    .contact-us-column-container{
-      margin:-20px 0px 0px -20px;
-      @include flexDirection(column);
-
-    .contact-us-column{
-      @include flexDirection(column);
-
-    ion-icon {
-      font-size: 2rem;
-      color: $whiteColor;
-    }
-
-    address {
-      color: $whiteColor;
+      address {
+        color: $whiteColor;
+      }
     }
   }
-    }
+}
+
+
+.remove-contact-us-icon {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  height: 50vh;
+  margin-left: -65px;
+  margin-top: -42px;
+
+  &:hover {
+    color: black;
   }
-
-
-
-  .remove-contact-us-icon{
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-    height: 50vh;
-    margin-left: -65px;
-    margin-top: -42px;
-    &:hover{
-      color:black;
-    }
-  }
+}
