--- a/tech-website/style/style.css
+++ b/tech-website/style/style.css
@@ -10,6 +10,7 @@ body {
   font-family: "Montserrat";
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .line {
@@ -198,7 +199,7 @@ form {
   position: fixed;
   top: 100%;
   left: 0%;
-  width: 97.2%;
+  width: 98.6%;
   height: 20rem;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
@@ -499,6 +500,8 @@ h3 {
   background-attachment: fixed;
   height: 94vh;
   width: 100%;
+  transform: scale(0.1);
+  transition: 0.5s;
 }
 .features-section .line {
   background: white;
@@ -780,22 +783,14 @@ footer .footer-div p {
     visibility: hidden;
   }
 
-  .contact-us-box {
-    width: 100%;
-    height: 120rem;
-    top: 0%;
-    padding: 2px 32px 2px 32px;
-    border-top-left-radius: 0px;
-    border-bottom-left-radius: 0px;
-  }
-
   .contact-us-div {
-    margin-left: -60px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    width: 100%;
+    height: 120rem;
+    position: fixed;
     top: 100%;
     padding: 42px 2px 2px 22px;
     gap: 40px;
