--- a/food-website/style/style-js.css
+++ b/food-website/style/style-js.css
@@ -381,3 +381,15 @@
     font-size: 1.6rem;
     color: red;
 }
+
+.change-theme-icon {
+    position: fixed;
+    top: 92%;
+    left: 1%;
+    color: black;
+    font-size: 1.3rem;
+    box-shadow: .2px .2px 3px .2px black;
+    padding: 10px 12px 10px 12px;
+    border-radius: 200px;
+    background: white;
+}
