--- a/food-website/style/style.css
+++ b/food-website/style/style.css
@@ -19,7 +19,7 @@ ul,
 .membership-container,
 .membership-icons-plan-row,
 .testimonials-container,
-.testimonials-box,.icons-container,
+.testimonials-box, .icons-container,
 .testimonial-name-div,
 .line-div,
 .contact-us-form-container,
@@ -132,11 +132,11 @@ ul,
 }
 
 
-body::-webkit-scrollbar,.feedback-box-div {
+body::-webkit-scrollbar, .feedback-box-div {
     background: linear-gradient(to left, rgb(184, 31, 11), rgb(220, 28, 3));
 }
 
-body::-webkit-scrollbar-thumb,.feedback-box-div {
+body::-webkit-scrollbar-thumb, .feedback-box-div {
     background: rgb(255, 132, 102);
     border-radius: 2px;
 }
@@ -145,7 +145,7 @@ body::-webkit-scrollbar-button {
     display: hidden;
 }
 
-body,.feedback-box-div {
+body, .feedback-box-div {
     overflow-x: hidden;
 }
 
@@ -160,7 +160,7 @@ textarea {
     border: none;
 }
 
-.orange-button{
+.orange-button {
     background: rgb(255, 58, 40);
     padding: 8px 12px 8px 12px;
     box-shadow: .2px .2px 6px .2px rgb(241, 58, 58);
@@ -382,7 +382,7 @@ h1 {
 
 .membership-cards {
     color: rgb(223, 26, 0);
-    box-shadow: .2px .2px 12px .2px lightgray;
+    box-shadow: .2px .2px 12px .2px #170000;
     width: 20rem;
     height: 20rem;
     padding: 2px 12px 12px 2px;
@@ -488,7 +488,7 @@ textarea {
     box-shadow: .2px .2px 12px .2px rgb(236, 236, 236);
 }
 
-.contact-us-form-container .orange-button{
+.contact-us-form-container .orange-button {
     border-radius: 200px;
     margin: 0px 0px 0px 80px;
 }
