--- a/tech-website/style/style.css
+++ b/tech-website/style/style.css
@@ -538,6 +538,10 @@ h3 {
   gap: 0px;
 }
 
+.accessibility-section {
+  transform: scale(0.1);
+  transition: 0.5s;
+}
 .accessibility-section .headings-container h2 {
   margin-top: 30px;
   color: black;
