--- a/food-website/style/dark-light-style.css
+++ b/food-website/style/dark-light-style.css
@@ -66,8 +66,7 @@ footer {
     flex-direction: column;
 }
 
-.orange-button,
-.submit-button,
+.primary-button,
 header,
 nav a:hover,
 a:hover,
@@ -91,9 +90,8 @@ footer {
     justify-content: center;
 }
 
-.orange-button:hover,
+.primary-button:hover,
 .customer-service-button ion-icon:hover,
-.submit-button:hover,
 .header-buttons-icons-container:nth-child(1) button,
 .testimonials-section .line,
 textarea {
@@ -101,16 +99,16 @@ textarea {
 }
 
 
-.orange-button:hover,
-.customer-service-button ion-icon:hover,
-.submit-button:hover {
+.primary-button:hover,
+.customer-service-button ion-icon:hover {
     transition: .3s;
     color: rgb(47, 4, 0);
     box-shadow: .2px .2px 4px .2px lightgray;
 }
 
 .customer-service-button {
-    background: rgb(47, 4, 0);
+    background: white;
+
 }
 
 nav a,
@@ -163,7 +161,7 @@ textarea {
     border: none;
 }
 
-.orange-button {
+.primary-button {
     background: rgb(66, 4, 0);
     padding: 8px 12px 8px 12px;
     box-shadow: .2px .2px 3px .2px rgb(54, 1, 1);
@@ -302,19 +300,21 @@ h1 {
 }
 
 .our-service-container {
-    justify-content: space-evenly;
-    gap: 100px;
+    justify-content: center;
+    gap: 120px;
     margin-top: 30px;
 }
 
 .service-icon-heading-column {
     padding: 12px 32px 2px 42px;
-    border: 23px double rgb(253, 253, 253);
-    border-radius: 20px;
+    border: 5px solid white;
+    border-radius: 4px;
 }
 
 .service-icon-heading-column ion-icon {
     font-size: 5rem;
+    margin-left: 20px;
+    color: white;
 }
 
 .service-icon-heading-column h1 {
@@ -384,13 +384,21 @@ h1 {
 
 .membership-icons-plan-row ion-icon {
     font-size: 1.8rem;
+    color: white;
 }
 
 .membership-icons-plan-row p {
     margin: -.5px 0px 0px 0px;
 }
 
+.membership-cards a, .primary-button {
+    background: white;
+    color: black;
+    box-shadow: .2px .2px 4px .2px white;
+}
+
 .membership-cards a {
+    color: #7a1900;
     margin: 60px 0px 0px 65px;
     font-size: .9rem;
 }
@@ -476,7 +484,7 @@ textarea {
     box-shadow: .2px .2px 2px .2px rgb(236, 236, 236);
 }
 
-.contact-us-form-container .orange-button {
+.contact-us-form-container .primary-button {
     border-radius: 200px;
     margin: 0px 0px 0px 80px;
 }
