--- a/food-website/style/style-js.css
+++ b/food-website/style/style-js.css
@@ -174,7 +174,6 @@
 }
 
 .customer-service-icon {
-    right: 0;
     right: 20px;
     bottom: 10px;
     z-index: +1;
@@ -183,6 +182,7 @@
     box-shadow: .2px .2px 3px .2px rgb(255, 58, 40);
     padding: 10px 12px 7px 12px;
     border-radius: 200px;
+    cursor: pointer;
 }
 
 .customer-service-box {
