--- a/food-website/style/mobile-navigation-bar-style.css
+++ b/food-website/style/mobile-navigation-bar-style.css
@@ -1,13 +1,18 @@
 @media screen and (max-width:704px) {
 
-    ul {
+    .nav-bar {
+        display: flex;
+        flex-direction: column;
+        visibility: hidden;
+    }
+
+    ul{
+        margin-top: -1px;
         display: flex;
         flex-direction: column;
     }
 
     .nav-bar-container {
-        z-index: +1;
-        visibility: hidden;
         position: fixed;
         left: 20%;
         top: 20%;
@@ -18,14 +23,14 @@
         height: 24rem;
     }
 
-    .navigation-bar a {
+    .nav-bar ul li a {
         color: black;
         border-radius: 200px;
         padding: 5px 10px 5px 10px;
         border: 3px solid rgb(230, 86, 19);
     }
 
-    .navigation-bar a:hover {
+    .nav-bar ul li a:hover {
         background: rgb(230, 86, 19);
         color: white;
     }
