--- a/food-website/style/style-js.css
+++ b/food-website/style/style-js.css
@@ -101,7 +101,7 @@
 }
 
 .log-in-box-div {
-    box-shadow: .2px .2px 6px .2px lightgray;
+    box-shadow: .2px .02px 6px .2px lightgray;
     z-index: 1;
     width: 22rem;
     height: 23rem;
@@ -193,10 +193,10 @@
     bottom: 70px;
     right: 0;
     z-index: +1;
-    animation-name: customerServiceBoxfadeIn;
+    animation-name: customerServiceBoxFadeIn;
 }
 
-@keyframes customerServiceBoxfadeIn {
+@keyframes customerServiceBoxFadeIn {
     0% {
         background: transparent;
         opacity: 0;
@@ -392,4 +392,17 @@
     padding: 10px 12px 10px 12px;
     border-radius: 200px;
     background: white;
+}
+
+
+.top-button-icon{
+    cursor: pointer;
+    font-size: 1.2rem;
+    position: fixed;
+    top: 82%;
+    left: 95%;
+    padding: 12px 13px 12px 13px;
+    background: #d90a0a;
+    color:white;
+    border-radius: 200px;
 }
