adding-dynamic-feature-in-website

--- a/food-website/style/style.css
+++ b/food-website/style/style.css
@@ -149,6 +149,7 @@ body, .feedback-box-div {
     overflow-x: hidden;
 }
 
+
 .contact-us-form-container input:focus,
 textarea:focus {
     box-shadow: 0px 0px 1px 1.5px rgb(211 0 51);
@@ -308,6 +309,7 @@ h1 {
 }
 
 .our-service-container {
+    transform: scale(.7);
     justify-content: center;
     gap: 120px;
     margin-top: 30px;
@@ -378,6 +380,9 @@ h1 {
 }
 
 .membership-container {
+    transform: rotate(180deg);
+    transform: scale(.3);
+    transition: 1s;
     margin-top: 70px;
     justify-content: space-around;
 }
@@ -425,6 +430,10 @@ svg {
 
 .testimonials-container {
     justify-content: space-around;
+}
+
+#box-1, #box-2, #box-3 {
+    transform: scale(.6);
 }
 
 .testimonials-box {
