--- a/food-website/style/style-js.css
+++ b/food-website/style/style-js.css
@@ -382,14 +382,14 @@
     color: red;
 }
 
-.change-theme-icon {
+.change-theme-icon-button {
     position: fixed;
     top: 92%;
     left: 1%;
     color: black;
     font-size: 1.3rem;
     box-shadow: .2px .2px 3px .2px black;
-    padding: 10px 12px 10px 12px;
+    padding: 9px 10px 6px 10px;
     border-radius: 200px;
     background: white;
 }
@@ -405,4 +405,6 @@
     background: #d90a0a;
     color: white;
     border-radius: 200px;
+    box-shadow: .2px .2px 6px .2px #dc0000;
+
 }
