--- a/food-website/style/style-js.css
+++ b/food-website/style/style-js.css
@@ -212,6 +212,10 @@
     margin-top: -10px;
 }
 
+.donation-box-heading {
+    text-align: center;
+}
+
 .customer-service-input {
     border: none;
     padding: 8px 12px 8px 12px;
@@ -394,7 +398,6 @@
     background: white;
 }
 
-
 .top-button-icon {
     cursor: pointer;
     font-size: 1.2rem;
@@ -406,5 +409,4 @@
     color: white;
     border-radius: 200px;
     box-shadow: .2px .2px 6px .2px #dc0000;
-
 }
