--- a/food-website/style/style-responsive.css
+++ b/food-website/style/style-responsive.css
@@ -1,4 +1,13 @@
 @media screen and (max-width: 704px) {
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        overflow-x: hidden;
+        font-family: 'Montserrat';
+    }
     .top-bar-container-logo-div,
     .nav-bar-icon-div,
     .top-bar-container,
@@ -12,7 +21,6 @@
     .nav-bar {
         display: flex;
     }
-
     .nav-bar-icon-div,
     .top-bar-container,
     .header-text-div,
@@ -27,24 +35,20 @@
     .nav-bar {
         flex-direction: column;
     }
-
     .membership-section,
     .membership-container,
     .testimonials-container {
         gap: 20px;
     }
-
     .top-bar-container {
         box-shadow: .2px .2px 12px .2px black;
         height: 10vh;
         background: rgb(83, 8, 1);
     }
-
     .top-bar-container-logo-div {
         padding-right: 50px;
         justify-content: space-between;
     }
-
     .top-bar-container-logo-div h3 {
         color: white;
         border: 8px double white;
@@ -54,13 +58,11 @@
         white-space: nowrap;
         font-size: 1rem;
     }
-
     .nav-bar-icon-div,
     .nav-bar {
         justify-content: center;
         align-items: center;
     }
-
     .nav-bar-icon {
         margin: 10px 0px 0px 67px;
         font-size: 1.5rem;
@@ -70,23 +72,19 @@
         padding: 6px 8px 6px 8px;
         border-radius: 8px;
     }
-
     .nav-bar-icon:hover {
         box-shadow: .2px .2px 6px .2px lightgray;
         transition: .2s;
         color: rgb(255, 81, 0);
     }
-
     ul {
         gap: 30px;
     }
-
     .menu-bar-heading {
         visibility: visible;
         color: rgb(230, 86, 19);
         margin-top: -35px;
     }
-
     .nav-bar a {
         border-radius: 200px;
         font-size: .9rem;
@@ -96,91 +94,73 @@
         padding: 7px 14px 7px 14px;
         text-decoration: none;
     }
-
     .nav-bar a:hover {
         transition: .2s;
         color: white;
         background: rgb(230, 86, 19);
     }
-
     .log-in-box-container {
         left: 10%;
         top: 20%;
     }
-
     .log-in-button {
         margin-left: -12px;
     }
-
     .nav a {
         padding: 8px 12px 8px 12px;
         text-decoration: none;
     }
-
     header {
         padding-top: 70px;
         height: 15.5rem;
         clip-path: none;
     }
-
     .header-image-div {
         visibility: hidden;
     }
-
     .header-text-div {
         font-size: .8rem;
         margin: -50px 0px 0px 350px;
     }
-
     .header-text-div h2 {
         font-size: .92rem;
         margin: -23px 0px 0px -20px;
         white-space: nowrap;
     }
-
     .header-buttons-container {
         gap: 20px;
         margin: 20px 0px 0px -30px;
         justify-content: space-evenly;
         box-shadow: none;
     }
-
     .header-buttons-icons-container ion-icon {
         font-size: 1.2rem;
     }
-
     .header-buttons-icons-container button {
         font-size: .75rem;
     }
-
     .contact-us-form-container input,
     textarea {
         margin-left: 43px;
         width: 70%;
     }
-
     h3 {
         text-align: center;
     }
-
     .img-container img {
         width: 18rem;
         height: auto;
     }
-
     .service-section p {
         font-size: .72rem;
     }
-
     .cuisine-section p {
         line-height: 24px;
         font-size: .8rem;
     }
-
     .membership-section {
         height: 75rem;
     }
-
     .header-text-div,
     .our-service-container,
     .img-container,
@@ -188,74 +168,58 @@
     .testimonials-container {
         align-items: center;
     }
-
     .our-service-container {
         margin-top: 70px;
     }
-
     .service-icon-heading-column {
         margin-top: -70px;
     }
-
     .service-icon-heading-column h1 {
         font-size: .9rem;
     }
-
     .service-icon-heading-column ion-icon {
         margin-left: 18px;
         font-size: 3.7rem;
     }
-
     .service-icon-heading-column {
         padding: 12px 32px 2px 42px;
     }
-
     .membership-container {
         margin-top: -20px;
     }
-
     .membership-cards {
         width: 20rem;
         height: 20rem;
     }
-
     .membership-icons-plan-row p {
         font-size: .9rem;
     }
-
     svg {
         z-index: -1;
         margin-top: -88px;
     }
-
     .testimonials-section {
         height: 82rem;
     }
-
     .contact-us-section p {
         font-size: .88rem;
     }
-
     .contact-us-div ion-icon {
         font-size: 1.4rem;
     }
-
     .contact-us-div p {
         font-size: .65rem;
     }
-
     .change-theme-icon {
         left: 3%;
         top: 93%;
         font-size: 1.1rem;
         padding: 8px 10px 10px 12px;
     }
-
     .customer-service-icon {
         font-size: 2rem;
         padding: 8px 10px 6px 10px;
     }
-
     .top-button-icon {
         font-size: 1.1rem;
         position: fixed;
@@ -263,11 +227,9 @@
         left: 84%;
         padding: 9px 10px 9px 10px;
     }
-
     .close-log-in-box-icon {
         margin-left: 250px;
     }
-
     .log-in-box-div {
         width: 18rem;
         height: 25rem;
@@ -275,27 +237,21 @@
         gap: 20px;
         border-radius: 8px;
     }
-
     .log-in-heading {
         font-size: 1.3rem;
         margin-top: -45px;
         color: rgb(255, 58, 40);
     }
-
     .log-in-input {
         box-shadow: .2px .2px 12px .2px lightgray;
         padding: 7px 8px 7px 8px;
     }
-
     .box-log-in-button,
     .create-your-account {
         padding: 8px 10px 8px 10px;
         box-shadow: .2px .2px 12px .2px rgb(241, 58, 58);
     }
-
     .box-log-in-button {
         background: rgb(255, 58, 40);
     }
-
-
 }
