--- a/food-website/style/style.css
+++ b/food-website/style/style.css
@@ -1,6 +1,9 @@
 body {
+    width: 100%;
+    height: 100%;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
     font-family: 'Montserrat';
 }
 
@@ -19,7 +22,8 @@ ul,
 .membership-container,
 .membership-icons-plan-row,
 .testimonials-container,
-.testimonials-box, .icons-container,
+.testimonials-box,
+.icons-container,
 .testimonial-name-div,
 .line-div,
 .contact-us-form-container,
@@ -131,12 +135,13 @@ ul,
     justify-content: flex-end;
 }
 
-
-body::-webkit-scrollbar, .feedback-box-div {
+body::-webkit-scrollbar,
+.feedback-box-div {
     background: linear-gradient(to left, rgb(184, 31, 11), rgb(220, 28, 3));
 }
 
-body::-webkit-scrollbar-thumb, .feedback-box-div {
+body::-webkit-scrollbar-thumb,
+.feedback-box-div {
     background: rgb(255, 132, 102);
     border-radius: 2px;
 }
@@ -145,10 +150,10 @@ body::-webkit-scrollbar-button {
     display: hidden;
 }
 
-body, .feedback-box-div {
+body,
+.feedback-box-div {
     overflow-x: hidden;
 }
-
 
 .contact-us-form-container input:focus,
 textarea:focus {
@@ -304,7 +309,6 @@ h1 {
     background: rgb(255, 94, 0);
 }
 
-
 .service-section p {
     font-size: 1.2rem;
 }
@@ -316,7 +320,6 @@ h1 {
 }
 
 .service-icon-heading-column {
-
     padding: 12px 32px 2px 42px;
     border: 5px solid rgb(155, 7, 7);
 }
@@ -432,7 +435,6 @@ svg {
     justify-content: space-around;
 }
 
-
 .testimonials-box {
     padding: 22px 12px 2px 16px;
     width: 17rem;
@@ -465,7 +467,6 @@ svg {
     margin: 15px 0px 0px 170px;
     text-align: end;
 }
-
 
 .contact-us-section {
     padding-bottom: 30px;
